# CdomRush

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.cache/clangd/index/: main.cpp.14298C347AFE0154.idx  store.cpp.4AA0B57C163A2BC5.idx
assets/images/: animation_groups.lua
assets/images/common/: common.lua  tower.lua
assets/images/enemies/: go_enemies_acaroth.lua  test.lua
assets/images/maps/: acaroth.lua
assets/sounds/common/: common.lua
assets/sounds/levelSpecific/: acaroth.lua
data/: level_map.lua
data/levels/: acaroth.lua
data/paths/: path.lua
data/towers/: acaroth.lua
data/waves/: acaroth.lua
docs/: arch.md
scripts/: clangdmake.sh  merge_branch.sh  new_branch.sh  synchronize.sh  test.sh  tranverse_animation.lua
src/: main.cpp
src/App/: app.cpp  app.h
src/Common/: action.h  animation.h  level.h  macros.h  random.h  renderData.h  resourceLevel.h  sound.h  state.cpp  state.h  towerEssential.h  type.cpp  type.h  viewData.h  wave.h
src/Function/calc/: buff.cpp  buff.h  damage.cpp  damage.h  hp.cpp  hp.h  motion.cpp  motion.h
src/Function/events/: events.cpp  events.h
src/Manager/levelManager/: levelManager.cpp  levelManager.h
src/Manager/pathManager/: pathManager.cpp  pathManager.h
src/Manager/resourceManager/: animationManager.cpp  animationManager.h  textureManager.cpp  textureManager.h
src/Manager/store/: store.cpp  store.h
src/Manager/templateManager/: templateManager.cpp  templateManager.h
src/Manager/waveManager/: waveManager.cpp  waveManager.h
src/Model/bullets/: bullets.cpp  bullets.h
src/Model/components/: animation.h  armor.h  attack.cpp  attack.h  bullets.cpp  damage.h  health.h  melee.cpp  melee.h  path.h  ranged.cpp  ranged.h  state.h
src/Model/enemies/: enemies.cpp  enemies.h
src/Model/fx/: fx.cpp  fx.h
src/Model/modifiers/: modifiers.h
src/View/: UIManager.cpp  UIManager.h  mapPosition.h  soundManager.cpp  soundManager.h
src/View/ui/: FxUI.h  (+14 more)
src/ViewModel/: level.h  wave.h
src/bullets/: bullets.h
src/enemies/: enemy_common.h
src/gui/: spriteManager.cpp  spriteManager.h  textureManager.h
src/modifiers/: modifiers.h
src/soldiers/: soldier_common.h
src/store/: store.h
src/towers/: tower_common.h
src/utils/: attacks.h  damage.h  macros.h  random.h  readLua.h  states.h  unit.h  vector2.h
(+56 files in other folders)
